--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,64 @@
-librosa
-numpy
+asttokens==2.4.1
+audioread==3.0.1
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+colorama==0.4.6
+comm==0.2.1
+decorator==5.1.1
+executing==2.0.1
+filelock==3.13.1
+fsspec==2024.2.0
+huggingface-hub==0.20.3
+idna==3.6
+ipython==8.21.0
+ipywidgets==8.1.2
+jedi==0.19.1
+Jinja2==3.1.3
+joblib==1.3.2
+jupyterlab_widgets==3.0.10
+lazy_loader==0.3
+librosa==0.10.1
+llvmlite==0.42.0
+MarkupSafe==2.1.5
+matplotlib-inline==0.1.6
+more-itertools==10.2.0
+mpmath==1.3.0
+msgpack==1.0.7
+networkx==3.2.1
+numba==0.59.0
+numpy==1.26.3
+packaging==23.2
+pandas==2.2.0
+parso==0.8.3
+platformdirs==4.2.0
+pooch==1.8.0
+prompt-toolkit==3.0.43
+pure-eval==0.2.2
+pycparser==2.21
+Pygments==2.17.2
+python-dateutil==2.8.2
+pytz==2024.1
+PyYAML==6.0.1
+regex==2023.12.25
+requests==2.31.0
+safetensors==0.4.2
+scikit-learn==1.4.0
+scipy==1.12.0
+six==1.16.0
+soundfile==0.12.1
+soxr==0.3.7
+stack-data==0.6.3
+sympy==1.12
+threadpoolctl==3.2.0
+tiktoken==0.6.0
+tokenizers==0.15.1
+torch==2.2.0
+tqdm==4.66.1
+traitlets==5.14.1
+transformers==4.37.2
+typing_extensions==4.9.0
+tzdata==2023.4
+urllib3==2.2.0
+wcwidth==0.2.13
+widgetsnbextension==4.0.10
